<resources>
    <string name="app_name">AndroSIM</string>
    <string name="play">Play</string>
    <string name="dungeon_without_dragons_t_cr_er_par">Créer par</string>
    <string name="samuel_dallaire">Samuel Dallaire</string>
    <string name="steven_duquette">Steven Duquette</string>
    <string name="maxime_morin">Maxime Morin</string>
    <string name="jason_morin">Jason Morin</string>
    <string name="marc_olivier_gaudreault_villeneuve">Marc-Olivier Gaudreault-Villeneuve</string>
    <string name="credit">Credit</string>
    <string name="i_nt_ne_nm_ns">I T E M S</string>
    <string name="s_np_ne_nl_nl_ns">S P E L L S</string>
    <string name="rest">Rest</string>
    <string name="attack">Attack</string>
    <string name="go_left">Go left</string>
    <string name="go_straight">Go straight</string>
    <string name="go_right">Go right</string>
    <string name="infoMiniGame">Shake your phone!</string>
    <string name="spell1_name">Lightning Bolt</string>
    <string name="spell2_name">Flurry of Blows</string>
    <string name="spell3_name">Sneak Attack</string>
    <string name="spell4_name">Test4</string>
    <string name="nom_de_compte">Nom de compte</string>
    <string name="mot_de_passe">Mot de passe</string>
    <string name="connexion">Connexion</string>
    <string name="ajout_compte">Ajout compte</string>
    <string name="menu_sneakattack">SneakAttack</string>
    <string name="btn_sneakattack">Sneak Attack!</string>
    <string name="timer">Timer</string>
    <string name="tap">Tap!</string>
</resources>
