<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/nomdecompte"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/nom_de_compte" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/motdepasse"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/mot_de_passe" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <Button
                        android:id="@+id/button_connexion"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:onClick="menuPrincipale"
                        android:text="@string/connexion" />

                    <Button
                        android:id="@+id/button_ajout_compte"
                        android:layout_width="wrap_content"
                        android:layout_height="100dp"
                        android:text="@string/ajout_compte" />
                </LinearLayout>

            </android.support.design.widget.TextInputLayout>
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>