<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Navigation">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:drawable/screen_background_dark"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true"
            android:cropToPadding="false"
            app:srcCompat="@drawable/pic_hallway" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:drawable/alert_dark_frame"
            android:gravity="bottom"
            android:orientation="horizontal">

            <Button
                android:id="@+id/buttonNavLeft"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:fontFamily="serif-monospace"
                android:text="@string/go_left"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/buttonNavCenter"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go_straight"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"
                android:textSize="14sp"/>

            <Button
                android:id="@+id/buttonNavRight"
                style="@style/AppTheme.Button"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/go_right"
                android:fontFamily="serif-monospace"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>